update: item return naturally when craft vanilla items.