@@ -59,8 +59,11 @@ public class ModifyCraftingInventory implements Listener {
             // empty checker ===>
             if (inventory.getItem(CRAFTING_TABLE_RESULT_SLOT) != null) {
                 // replace old result items
-                InventoryUtil.safetyItemDrop(player, Collections.singletonList(inventory.getItem(CRAFTING_TABLE_RESULT_SLOT)));
+                ItemStack item = inventory.getItem(CRAFTING_TABLE_RESULT_SLOT);
+                if (item == null || item.getType().equals(Material.AIR)) return;
+                InventoryUtil.safetyItemPlace(player, List.of(item));
                 inventory.setItem(CRAFTING_TABLE_RESULT_SLOT, new ItemStack(Material.AIR));
+                return;
             }
 
             if (clickType.equals(ClickType.SHIFT_LEFT)) {
